infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resubee
spec:
  selector:
    app: resubee
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
